--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "history": "^1.17.0",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
+    "react-router": "^1.0.0",
+    "redux": "^3.3.1",
+    "redux-thunk": "^1.0.3"
   }
 }
