--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "electron-prebuilt": "^0.36.0",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
