--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
     "electron-prebuilt": "^0.36.0",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.2",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
