--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "electron": "^1.4.6",
     "electron-packager": "^5.2.1",
-    "electron-prebuilt": "^0.36.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
     "react-hot-loader": "^1.3.0",
